plugins {
    java
    id("org.springframework.boot") version "3.5.3"
    id("io.spring.dependency-management") version "1.1.7"
    id("pmd")
    id("com.github.spotbugs") version "6.0.25"
    id("org.sonarqube") version "5.1.0.4882"
    id("jacoco")
    id("com.diffplug.spotless") version "7.1.0"
}

group = "com.example"
version = "0.0.1-SNAPSHOT"

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(24)
    }
}

configurations {
    compileOnly {
        extendsFrom(configurations.annotationProcessor.get())
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation("org.springframework.boot:spring-boot-starter-actuator")
    implementation("org.springframework.boot:spring-boot-starter-cache")
    implementation("org.springframework.boot:spring-boot-starter-data-redis")
    implementation("org.springframework.boot:spring-boot-starter-web")
    implementation("com.github.ben-manes.caffeine:caffeine")

    compileOnly("org.projectlombok:lombok")

    developmentOnly("org.springframework.boot:spring-boot-devtools")
    developmentOnly("org.springframework.boot:spring-boot-docker-compose")

    annotationProcessor("org.springframework.boot:spring-boot-configuration-processor")
    annotationProcessor("org.projectlombok:lombok")

    testImplementation("org.springframework.boot:spring-boot-starter-test")
    testImplementation("org.springframework.boot:spring-boot-testcontainers")
    testImplementation("org.testcontainers:junit-jupiter")
    testImplementation("org.testcontainers:testcontainers")
    testRuntimeOnly("org.junit.platform:junit-platform-launcher")

    // Code quality tools
    spotbugsPlugins("com.h3xstream.findsecbugs:findsecbugs-plugin:1.13.0")
}

tasks.withType<Test> {
    useJUnitPlatform()
    testLogging {
        events("PASSED", "SKIPPED", "FAILED")
        showStandardStreams = true
    }
    // JaCoCo has issues with Java 24, make it optional
    if (project.hasProperty("enableJacoco")) {
        finalizedBy(tasks.jacocoTestReport)
    }
}

// Spotless Configuration for Code Formatting
spotless {
    java {
        target("src/**/*.java")

        // Use Palantir Java format
        palantirJavaFormat("2.50.0")

        // Remove unused imports
        removeUnusedImports()

        // Trim trailing whitespace
        trimTrailingWhitespace()

        // End files with newline
        endWithNewline()

        // Import ordering
        importOrder("java", "javax", "org", "com", "")

        // Format annotations
        formatAnnotations()

        // Toggle wildcard imports (avoid them)
        toggleOffOn("@formatter:off", "@formatter:on")
    }

    kotlinGradle {
        target("*.gradle.kts")
        ktlint()
    }
}

// PMD Configuration
pmd {
    toolVersion = "7.8.0"
    isConsoleOutput = true
    ruleSetFiles = files("config/pmd/ruleset.xml")
    ruleSets = listOf() // Clear default rule sets since we're using custom
    isIgnoreFailures = true // Allow build to succeed with PMD violations on Java 24
}

// SpotBugs Configuration
spotbugs {
    toolVersion = "4.8.6"
    effort = com.github.spotbugs.snom.Effort.MAX
    reportLevel = com.github.spotbugs.snom.Confidence.LOW
    excludeFilter = file("config/spotbugs/excludeFilter.xml")
    ignoreFailures = true // Allow build to succeed with SpotBugs issues on Java 24
}

tasks.spotbugsMain {
    reports.create("html") {
        required = true
        outputLocation = file("${layout.buildDirectory.get()}/reports/spotbugs/main.html")
        setStylesheet("fancy-hist.xsl")
    }
}

tasks.spotbugsTest {
    reports.create("html") {
        required = true
        outputLocation = file("${layout.buildDirectory.get()}/reports/spotbugs/test.html")
        setStylesheet("fancy-hist.xsl")
    }
}

// JaCoCo Configuration
jacoco {
    toolVersion = "0.8.12"
}

tasks.jacocoTestReport {
    dependsOn(tasks.test)
    reports {
        xml.required = true
        html.required = true
        csv.required = false
    }
    // JaCoCo has compatibility issues with Java 24, disable for now
    enabled = false
}

tasks.jacocoTestCoverageVerification {
    violationRules {
        rule {
            limit {
                minimum = "0.80".toBigDecimal()
            }
        }
    }
    // JaCoCo has compatibility issues with Java 24, disable for now
    enabled = false
}

// SonarQube Configuration
sonar {
    properties {
        property("sonar.projectKey", "spring-redis-local-cache")
        property("sonar.projectName", "Spring Redis Local Cache")
        property("sonar.host.url", "http://localhost:9000")
        property("sonar.sources", "src/main/java")
        property("sonar.tests", "src/test/java")
        property("sonar.java.binaries", "build/classes/java/main")
        property("sonar.java.test.binaries", "build/classes/java/test")
        property("sonar.coverage.jacoco.xmlReportPaths", "build/reports/jacoco/test/jacocoTestReport.xml")
        property("sonar.junit.reportPaths", "build/test-results/test")
        property("sonar.java.source", "24")
    }
}

// Custom task to run all code quality checks
tasks.register("codeQuality") {
    dependsOn("spotlessCheck")
    // Add other tools conditionally since they have Java 24 compatibility issues
    if (project.hasProperty("enableAllQualityChecks")) {
        dependsOn("pmdMain", "pmdTest", "spotbugsMain", "spotbugsTest", "jacocoTestReport")
    }
    group = "verification"
    description = "Runs code quality checks - use -PenableAllQualityChecks for all tools"
}

// Custom task to fix code formatting and style issues
tasks.register("fixCode") {
    dependsOn("spotlessApply")
    group = "formatting"
    description = "Automatically fixes code formatting and common style issues"
}

// Make spotlessCheck run before compilation
tasks.compileJava {
    dependsOn("spotlessCheck")
}

// Make build depend on code quality checks (but make it conditional)
tasks.check {
    dependsOn("spotlessCheck") // Always check formatting
    // Only include problematic tools if explicitly enabled
    if (project.hasProperty("enableAllQualityChecks")) {
        dependsOn("codeQuality")
    }
}
